# lessmd

./: AGENTS.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  plan.md
.github/workflows/: release.yml
docs/: less-compatibility.md  lessmd.md
src/: cli.rs  document.rs  help.rs  input.rs  lib.rs  main.rs  pager.rs  search.rs  source.rs
src/render/: markdown.rs  mermaid.rs  mod.rs  syntax.rs  text.rs
tests/: cli.rs  integration.rs  perf.rs
tests/fixtures/: blockquote.md  codeblocks.md  headings.md  inline.md  languages.md  lists.md  mermaid.md  plain.txt  tables.md
